--- a/Css/style.css
+++ b/Css/style.css
@@ -235,3 +235,5 @@ header {
 .categories p {
     font-size: 0.85rem;
 }
+
+/* ========================= Popular Courses =========================== */
